# StatusCard-Qt6

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
StatusCard/: CMakeLists.txt  StatusCardKitConfig.cmake.in  statuscard.cpp  statuscard.h  statuscardgrid.cpp  statuscardgrid.h  statuscardkit_export.h  statuscardqss.h  statusmapper.cpp  statusmapper.h
